@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020200810"
-#define public MagickPackageReleaseDate "snapshot-20200810"
+#define public MagickPackageVersionAddendum ".020200812"
+#define public MagickPackageReleaseDate "snapshot-20200812"
